--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,10 @@ version = '0.0.1-SNAPSHOT'
 
 ext {
 	OPENAPI_VERSION = '2.2.0'
-	LOGBACK_VERSION = '0.1.5'
+	//LOGBACK_VERSION = '0.1.5'
+	LOGBACK_ENCODER_VERSION = '7.4'
+
+	REST_ASSURED_VERSION = '5.3.0'
 }
 
 dependencies {
@@ -24,7 +27,8 @@ dependencies {
 	implementation "net.logstash.logback:logstash-logback-encoder:$LOGBACK_ENCODER_VERSION"
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	testImplementation "io.rest-assured:rest-assured:$REST_ASSURED_VERSION"
+	//testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 tasks.named('test') {
