--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,10 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	//implementation 'io.micrometer:micrometer-tracing'
+	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$OPENAPI_VERSION"
 	//implementation 'ch.qos.logback:logback-classic:1.4.11'
