--- a/compose.yml
+++ b/compose.yml
@@ -1,65 +1,52 @@
-version: '3.8'
+version: '2'
 services:
-
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.2.1
-    container_name: zookeeper
+    image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
-#    networks:
-#      - kafka-net
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 22181:2181
 
-  kafka-broker-1:
-    image: confluentinc/cp-kafka:7.2.1
-    container_name: kafka-broker-1
+  kafka-1:
+    image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     ports:
-      - "8097:8097"
-    expose:
-      - "29092"
+      - 29092:29092
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: EXTERNAL:PLAINTEXT,INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:8097,INTERNAL://kafka-broker-1:29092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-#    networks:
-#      - kafka-net
-
-  kafka-broker-2:
-    image: confluentinc/cp-kafka:7.2.1
-    container_name: kafka-broker-2
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-1:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  kafka-2:
+    image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     ports:
-      - "8098:8098"
+      - 39092:39092
     environment:
       KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: EXTERNAL:PLAINTEXT,INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:8098,INTERNAL://kafka-broker-2:29092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-#    networks:
-#      - kafka-net
-
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-2:9092,PLAINTEXT_HOST://localhost:39092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
   init-kafka:
-    image: confluentinc/cp-kafka:7.2.1
+    image: confluentinc/cp-kafka:latest
     depends_on:
-      - kafka-broker-1
-      - kafka-broker-2
+      - kafka-1
+      - kafka-2
     entrypoint: [ '/bin/sh', '-c' ]
     command: |
       "
-      kafka-topics --bootstrap-server kafka-broker-1:29092 --list
+      kafka-topics --bootstrap-server kafka-1:9092 --list
       
-      kafka-topics --bootstrap-server kafka-broker-1:29092 --create --if-not-exists --topic incoming-transactions --replication-factor 1 --partitions 1
-      kafka-topics --bootstrap-server kafka-broker-1:29092 --create --if-not-exists --topic categorized-transactions --replication-factor 1 --partitions 1
+      kafka-topics --bootstrap-server kafka-1:9092 --create --if-not-exists --topic incoming-transactions --replication-factor 1 --partitions 1
+      kafka-topics --bootstrap-server kafka-1:9092 --create --if-not-exists --topic categorized-transactions --replication-factor 1 --partitions 1
       
       echo -e 'Successfully created the following topics:'
-      kafka-topics --bootstrap-server kafka-broker-1:29092 --list
+      kafka-topics --bootstrap-server kafka-1:9092 --list
       "
-
-#networks:
-#  kafka-net:
-#    driver: bridge
