--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,11 @@ spring:
   application.name: ingestion-service
   kafka:
     producer:
-      bootstrap-servers: localhost:8097
+      bootstrap-servers: localhost:29092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-#      retries: 0
+      client-id: ingestion-client
+      group-id: ingestion-group
       properties:
         delivery.timeout.ms: 1500
         request.timeout.ms: 1500
