--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
       group-id: ingestion-group
 
 topic.name.transaction-ingestion: incoming-transactions
+
 logging:
   level.root: INFO
   pattern.level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+
+management.tracing.sampling.probability: 1.0
