--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,12 @@ group = 'com.transactions.challenge'
 version = '0.0.1-SNAPSHOT'
 
 ext {
-	OPENAPI_VERSION = '2.2.0'
+	KAFKA_VERSION = '3.0.11'
 	LOGBACK_ENCODER_VERSION = '7.4'
+	MICROMETER_VERSION = '1.1.5'
+	OPENAPI_VERSION = '2.2.0'
 	REST_ASSURED_VERSION = '5.3.0'
+	ZIPKIN_REPORTER_VERSION = '2.16.3'
 }
 
 dependencies {
@@ -18,13 +21,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
-	implementation 'org.springframework.kafka:spring-kafka'
+	implementation "org.springframework.kafka:spring-kafka:$KAFKA_VERSION"
+	implementation "io.micrometer:micrometer-tracing-bridge-brave:$MICROMETER_VERSION"
+	implementation "io.zipkin.reporter2:zipkin-reporter-brave:$ZIPKIN_REPORTER_VERSION"
 	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$OPENAPI_VERSION"
 	implementation "net.logstash.logback:logstash-logback-encoder:$LOGBACK_ENCODER_VERSION"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation "io.rest-assured:rest-assured:$REST_ASSURED_VERSION"
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	testImplementation "org.springframework.kafka:spring-kafka-test:$KAFKA_VERSION"
 }
 
 tasks.named('test') {
