Included both services under the same repo to improve scenario understanding

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
-rootProject.name = 'ingestion-service'
+rootProject.name = 'spring-boot-kafka-zipkin'
+include 'ingestion-service'
+include 'categorization-service'
+
